bin/ingress/nginx-ingress-controller.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: 
  name: nginx-ingress-controller
spec: 
  replicas: 2
  revisionHistoryLimit: 3
  template: 
    metadata: 
      labels: 
        k8s-app: ingress-nginx
    spec:
      containers:
        - args: 
            - /nginx-ingress-controller
            - "--default-backend-service=$(POD_NAMESPACE)/default-http-backend"
            - "--configmap=$(POD_NAMESPACE)/nginx-ingress-controller-config"
            - "--publish-service=$(POD_NAMESPACE)/ingress-nginx"
          image: "quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.9.0-beta.17"
          imagePullPolicy: Always
          livenessProbe: 
            httpGet: 
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
          name: nginx-ingress-controller
          resources:
            limits:
              cpu: 1000m
              memory: 1160Mi
            requests:
              cpu: 30m
              memory: 20Mi
          ports: 
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    k8s-app: ingress-nginx
