bin/ingress/frontend-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: awsumio-frontend-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "awsum.io"
    secretName: awsum-tls
  rules:
  - host: "awsum.io"
    http:
      paths:
      - backend:
          serviceName: awsumio-frontend
          servicePort: 80
