bin/ingress/services-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: awsumio-services-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: awsumio-services-tls
    hosts:
    - "api.awsum.io"
  rules:
  - host: "api.awsum.io"
    http:
      paths:
      - backend:
          serviceName: awsumio-api
          servicePort: 8080
